# backend/src/routes/auth.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
-import { login, signup } from "../controllers/authController";
+import { login, logout, signup } from "../controllers/authController";
 
 const router = Router();
 
 router.post("/login", login);
+router.post("/logout", logout);
 router.post("/signup", signup);
 
 export default router;
